--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Etch-a-Sketch</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Etch-a-sketch</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-
-    <header id="navigation">
-        <button id="resetGrid"></button>
+    <header>
+        <h1 class="title">Etch-a-sketch</h1>
     </header>
-
-    <div id="container">
+    <div id="main-container" class="container">
+        <button id="reset-button" class="button">Change size</button>
+        <div id="grid-container" class="grid"></div>
     </div>
-
-
-    <script src="script.js" async defer></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
